ingress-hello-minikube-fwb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations: {
    "fortiweb-ip" : "10.1.1.2",
    "fortiweb-login" : "fwb-login",
    "fortiweb-ctrl-log" : "disable",
    "virtual-server-ip" : "10.2.2.130",
    "virtual-server-addr-type" : "ipv4",
    "virtual-server-interface" : "port2",
    "server-policy-web-protection-profile" : "Inline Standard Protection",
    "server-policy-https-service" : "HTTPS",
    "server-policy-http-service" : "HTTP",
    "server-policy-syn-cookie" : "enable",
    "server-policy-http-to-https" : "disable"
  }
spec:                                                                                                                                          
 ingressClassName: fadc-ingress-controller                                                                                                     
 rules:                                                                                                                                        
 - http:                                                                                                                                       
    paths:                                                                                                                                     
    - path: /                                                                                                                                  
      pathType: Prefix                                                                                                                         
      backend:                                                                                                                                 
        service:                                                                                                                               
          name: hello-minikube                                                                                                                 
          port:                                                                                                                                
            number: 8080
